// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingMessage renders active=false correctly 1`] = `
<div
  className="bx--loading-overlay bx--loading-overlay--stop"
>
  <Loading
    active={false}
    description="Active loading indicator"
    small={false}
    withOverlay={false}
  />
</div>
`;

exports[`LoadingMessage renders correctly 1`] = `
<div
  className="bx--loading-overlay"
>
  <Loading
    active={true}
    description="Active loading indicator"
    small={false}
    withOverlay={false}
  />
</div>
`;

exports[`LoadingMessage renders withOverlay=false correctly 1`] = `
<Loading
  active={true}
  description="Active loading indicator"
  small={false}
  withOverlay={false}
/>
`;
